Limit strict RUBY_METHOD_FUNC in C++

Limit strict function signature check with RUBY_METHOD_FUNC in C++
to bundled libraries only.  [Bug #16271]